--- a/Project_2/Feature selection methods_digits.ipynb
+++ b/Project_2/Feature selection methods_digits.ipynb
@@ -12392,19 +12392,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vars_indexes = np.where(feat_selector_digits.support_)[0]"
+    "vars_kbest = np.where(kbest.get_support())[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   2,    6,    7, ..., 4994, 4997, 4999], dtype=int64)"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vars_kbest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
+    "vars_indexes = vars_kbest[feat_selector_digits.support_]\n",
     "pd.DataFrame({'MATSZY': vars_indexes + 1}).to_csv('MATSZY_digits_features.txt', index = None)"
    ]
   }
